3.47.4
======
Sepp 19, 2023
- Override transitive libararies to pick up vulnerability fixes
  - Update guava from v32.0.1-jre to v32.1.2-jre
  - Update okio from v1.172. to v1.17.5

3.47.3
======
Sep 18, 2023
- All annotations can now accept single or double quoted values
- Prefer single quoted values over double for all annotations
- Update scala from v3.3.0 to v3.3.1

3.47.2
======
Sep 16, 2023
- Use And keyword in trailing expanded dry run value steps

3.47.1
======
Sep 16, 2023
- Fix dry run annotation logic in for-each loop
- Remove pre-existing same named loop var check and restore value when for-each finishes

3.47.0
======
Sep 15, 2023
- Introduce DryRun Annotations to specify values for bindings that cannot be resolved in dry runs
  - `@DryRun(name = '<name>', value = '<value>')`
    - To specify a single dry run value
    - The step having the annotation will be called once with this value in a dry run
  - `@DryRun(name = '<name>', value = {'<value-1>', '<value-2>', '<value-N>'})`
    - To specify multiple dry run values
    - The step having the annotation will be repeatedly called for each value in a dry run
- Both Message and DryRun annotations can now accept single quotes in addition to double quotes around values

3.46.0
======
Sep 7, 2023
- Any type of binding can now be used as a boolean condition throughout the DSLs (in prior versions only JS or simple bindings were accepted).

3.45.0
======
Sep 7, 2023
- Add DSLs to capture PDF text content
  - `I capture the PDF text from url "<url>" `
  - `I capture the PDF text from url "<url>" as <name>`
  - `I capture the PDF text from file "<filepath>"`
  - `I capture the PDF text from file "<filepath>" as <name>`
- Introduce JSONArray notation for accessing list values in settings as JSON array literals

3.44.7
======
Aug 28, 2023
- Runtime library updates
  - Update htmlcleaner from v2.28 to v2.29
  - Update commons-codec from v1.15 to v1.16.0
  - Update commons-model from v5.8.0 to v5.8.1