@@ -1,6 +1,7 @@
 3.47.4
 ======
-Sepp 19, 2023
+Sep 19, 2023
+- Support square brackets in addition to curly braces for list values in annotations (former preferred)
 - Override transitive libararies to pick up vulnerability fixes
   - Update guava from v32.0.1-jre to v32.1.2-jre
   - Update okio from v1.172. to v1.17.5
